fixed query results behind modal

--- a/src/main/java/com/xresch/cfw/features/query/resources/cfw_query.css
+++ b/src/main/java/com/xresch/cfw/features/query/resources/cfw_query.css
@@ -118,6 +118,7 @@
 
 #query-autocomplete-results{
 	background: rgba(0,0,0, 0.75);
+	
 }
 
 #query-autocomplete-results > div{
@@ -127,7 +128,7 @@
     bottom: 0vh;
     left: 0;
     height: 50vh;
-    z-index: 1031;
+    z-index: 1055; /*above modal below popovers */
     overflow-y: scroll;
     padding: 10px;
     margin: 0px 20px;
